--- a/package.json
+++ b/package.json
@@ -4,27 +4,32 @@
   "description": "\"Todo list\"",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "db:create:test": "NODE_ENV=test npx sequelize-cli db:create",
+    "pretest": "NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create",
+    "test": "NODE_ENV=test jest --detectOpenHandles",
     "prepare": "husky install"
   },
-  
   "lint-staged": {
     "*.js": [
       "eslint",
       "prettier --write ."
     ]
   },
-
   "author": "Archana <archana.b4902@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "jest": "^29.0.3"
+    "jest": "^29.0.3",
+    "minimist": "^1.2.7",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.25.6"
   },
   "devDependencies": {
     "eslint": "^8.26.0",
     "husky": "^8.0.1",
     "jest": "^29.2.1",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "sequelize-cli": "^6.5.2"
   }
 }
